<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="352dp"
        android:text="@string/_0"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="372dp"
        android:layout_height="389dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_7"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_8"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_9"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_4"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_5"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_6"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button8"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_1"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_2"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/_3"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button17"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/mas"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/cero"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button19"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/menos"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button26"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/por"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button27"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/igual"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />

                <Button
                    android:id="@+id/button28"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D6D6D6"
                    android:text="@string/div"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button29"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:backgroundTint="#D5D5D5"
                    android:text="@string/restaurar_valores"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="7dp"
                    app:rippleColor="#2B2B2B" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#689F38"
        android:onClick="irScroll"
        android:text="@string/pasar_a_scrollview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/button31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#980D0D"
        android:onClick="volver"
        android:text="@string/backtoback"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>